<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".EnterNumbers">

    <TextView
        android:id="@+id/top_Message_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fraunces"
        android:text="Deafault enter message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="returnChooseNumDigits"
        android:text="@string/back_button"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button_enter"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="launchVerifyNumbers"
        android:text="@string/next_button"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button_enter" />

    <Button
        android:id="@+id/clear_button_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="clear"
        android:text="@string/clear"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/back_button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/undo_button_enter" />

    <Button
        android:id="@+id/undo_button_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="undo"
        android:text="@string/undo"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear_button_enter"
        app:layout_constraintEnd_toStartOf="@+id/clear_button_enter"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/number_selected_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:text="@string/select_num"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_nums_textView" />

    <NumberPicker
        android:id="@+id/number_picker_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/spinner_description"
        android:minHeight="48dp"
        android:scrollbarSize="40dp"
        android:textAlignment="center"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toTopOf="@+id/undo_button_enter"
        app:layout_constraintEnd_toStartOf="@+id/add_button_enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_selected_textView" />

    <Button
        android:id="@+id/add_button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="add"
        android:text="@string/add"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_picker_enter"
        app:layout_constraintTop_toBottomOf="@+id/number_selected_textView" />

    <TextView
        android:id="@+id/display_nums_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:text="@string/numbers"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/number_selected_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_Message_TextView"
        app:layout_constraintWidth_max="300dp" />

</androidx.constraintlayout.widget.ConstraintLayout>