<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".VerifyNumbers">

    <TextView
        android:id="@+id/verify_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fraunces"
        android:text="@string/correct_verify"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="returnEnterNumbers"
        android:text="@string/back_button"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/next_verify"
        app:layout_constraintEnd_toStartOf="@+id/next_verify"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="launchSelectWheel"
        android:text="@string/next_button"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_verify" />

    <TextView
        android:id="@+id/next_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="166dp"
        android:fontFamily="@font/fraunces"
        android:text="@string/tap_next"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/next_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numbers_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:text="default"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/next_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_textView"
        app:layout_constraintWidth_max="300dp" />
</androidx.constraintlayout.widget.ConstraintLayout>