<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".SelectWheel">

    <NumberPicker
        android:id="@+id/picker_select_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toTopOf="@+id/back_select_wheel"
        app:layout_constraintEnd_toStartOf="@+id/choose_select_wheel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_wheel_info_select_wheel" />

    <Button
        android:id="@+id/back_select_wheel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="returnEnterNumbers"
        android:text="@string/back_button"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_select_wheel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_select_wheel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="launchNextActivity"
        android:text="@string/next_button"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_select_wheel" />

    <Button
        android:id="@+id/choose_select_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:onClick="setChosenWheel"
        android:text="@string/choose_button"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/next_select_wheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picker_select_wheel"
        app:layout_constraintTop_toBottomOf="@+id/display_wheel_info_select_wheel" />

    <TextView
        android:id="@+id/top_message_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fraunces"
        android:text="@string/choose_a_wheel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_wheel_info_select_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/fraunces"
        android:text="@string/wheel_info"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_message_select"
        app:layout_constraintWidth_max="300dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="picker_select_wheel,choose_select_wheel" />

    <TextView
        android:id="@+id/selected_wheel_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fraunces"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_select_wheel" />

</androidx.constraintlayout.widget.ConstraintLayout>